# n_vs_best_t-pipeline

./: .gitignore  README.md  pyproject.toml
outputs/n_vs_best_t/: DATASET_COMPARISON.md  REPORT.md  best_t_table.csv  best_t_table_markdown_baselines.csv  equal_mix_all.csv  sim_baselines_all.csv  sim_extended_all.csv  sim_v2_all.csv  v1_all.csv  v1_multiB_all.csv
outputs/n_vs_best_t/alloc_compare/: math500_Phi.csv
outputs/n_vs_best_t/equal_mix/: aime2023_Phi-4-mini-instruct.csv  aime2023_Qwen2.5-3B.csv  aime2023_Qwen3-4B-Instruct-2507.csv  (+16 more)
outputs/per_problem_regret/: PER_MODEL_REGRET.md  REPORT.md  SYNTHESIS.md  SYNTHESIS_R1.md  TABLES.md  summary_distribution_stats.csv  summary_oracle_gap.csv  summary_paired_comparison.csv  summary_stochastic_dominance.csv  summary_t_star_distribution.csv
scripts/: slurm_common.sh
scripts/cross_t_mode/: lb_algorithm_v1.py  lb_baselines.py
scripts/n_vs_best_t/: build_dataset_comparison.py  build_report.py  combos.txt  compare_alloc_strategies.py  compute_best_t_curves.py  merge_equal_mix.py  merge_sim_baselines.py  merge_sim_extended.py  merge_sim_v2.py  merge_v1.py  parse_difficulty_reports.py  plot_alloc_compare.py  plot_cross.py  plot_curves.py  plot_difficulty_bar.py  plot_n_x_t.py  run_equal_mix_one.py  run_gsm8k_llama_combo.slurm  run_gsm8k_llama_sim_v2.slurm  run_sim_baselines_one.py  run_sim_v2_combo.slurm  run_sim_v2_gsm8k_llama.slurm  run_sim_v2_one.py  run_v1_multi_B_one.py  run_v1_one.py
scripts/per_problem_regret/: analyze.py  build_report.py  compute_a_hat.py  config.py  plots.py  run_pipeline.py  validate.py
(+116 files in other folders)
