[project]
name = "n-vs-best-t-pipeline"
version = "0.1.0"
description = "N vs best-T analysis pipeline for maj@N scaling (single-T MV vs equal_mix / consensus_vote baselines)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/n_vs_best_t", "scripts/cross_t_mode"]
